--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -32,3 +32,10 @@ main {
 h3 {
   padding: 0.5rem 0;
 }
+
+/* product screen section */
+
+.product-screen-img {
+  width: 450px;
+  height: 450px;
+}
